# dreamchess-tools

./: autogen.sh  configure.ac
data/icon/: icon.blend
data/models/: 2d.blend  board.blend  classichigh.blend  classiclow.blend  elements.blend
data/models/title/: title.blend
data/xcf/: dchess_title.xcf  default-board.xcf  flat-board.xcf  lettering.xcf  marble.xcf  metal-board.xcf  metal-border.xcf  pieces.xcf  sketch-border.xcf
macports/audio/libsdl_mixer/: Portfile
macports/devel/libmxml/: Portfile
macports/devel/libsdl/files/: patch-fatbuild.sh
macports/devel/libsdl_image/: Portfile
macports/leopard/: leopard-intel-conf.sh
macports/leopard/archivers/zlib/: Portfile
macports/leopard/audio/libsdl_mixer/: Portfile
macports/leopard/devel/libmxml/: Portfile
macports/leopard/devel/libsdl/: Portfile
macports/leopard/devel/libsdl/files/: patch-fatbuild.sh
macports/leopard/devel/libsdl_image/: Portfile
macports/leopard/graphics/libpng/: Portfile
macports/leopard/multimedia/libogg/: Portfile
pkg/macosx/: makedmg.sh
pkg/win32/: dreamchess.nsi
src/: Makefile.am  colour-reduce.sh  dcicon.c  dcm_export.py  dcmstrip.cpp  ttf2png.c  vmuicon.c
